main.tf
# creating vpc

resource "aws_vpc" "myvpc" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name = "main-vpc"
  }
}

# creating 2 subnets both public and private

resource "aws_subnet" "public" {
  vpc_id                  = aws_vpc.myvpc.id
  cidr_block              = "10.0.1.0/24"
  map_public_ip_on_launch = true
<<<<<<< HEAD
  availability_zone       = "ap-south-1a"
=======
  availability_zone       = "us-east-2"
>>>>>>> dad4c68 (terrform error correction)
  tags = {
    Name = "public-subnet"
  }
}

resource "aws_subnet" "private" {
  vpc_id            = aws_vpc.myvpc.id
  cidr_block        = "10.0.2.0/24"
<<<<<<< HEAD
  availability_zone = "ap-south-1a"
=======
  availability_zone = "us-east-2"
>>>>>>> dad4c68 (terrform error correction)
  tags = {
    Name = "private-subnet"
  }
}

# creating internet gateway and route table

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.myvpc.id
}

resource "aws_route_table" "public_rt" {
  vpc_id = aws_vpc.myvpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }
}

resource "aws_route_table_association" "public_assoc" {
  subnet_id      = aws_subnet.public.id
  route_table_id = aws_route_table.public_rt.id
}

resource "aws_route_table" "private_rt" {
  vpc_id = aws_vpc.myvpc.id
}

resource "aws_route_table_association" "private_assoc" {
  subnet_id      = aws_subnet.private.id
  route_table_id = aws_route_table.private_rt.id
}

# creating NACL to communicate with one public instance to private instance

resource "aws_network_acl" "main_nacl" {
  vpc_id = aws_vpc.myvpc.id
}

resource "aws_network_acl_rule" "inbound" {
  network_acl_id = aws_network_acl.main_nacl.id
  rule_number    = 100
  protocol       = "-1"
  rule_action    = "allow"
  cidr_block     = "10.0.0.0/16"
  egress         = false
}

resource "aws_network_acl_rule" "outbound" {
  network_acl_id = aws_network_acl.main_nacl.id
  rule_number    = 100
  protocol       = "-1"
  rule_action    = "allow"
  cidr_block     = "10.0.0.0/16"
  egress         = true
}

resource "aws_network_acl_association" "public_nacl" {
  subnet_id      = aws_subnet.public.id
  network_acl_id = aws_network_acl.main_nacl.id
}

resource "aws_network_acl_association" "private_nacl" {
  subnet_id      = aws_subnet.private.id
  network_acl_id = aws_network_acl.main_nacl.id
}

# creating two ec2 instance

resource "aws_security_group" "allow_internal" {
  vpc_id = aws_vpc.myvpc.id

  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["10.0.0.0/16"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "public_ec2" {
  ami                    = "ami-09256c524fab91d36"
  instance_type          = "t2.micro"
  subnet_id              = aws_subnet.public.id
  vpc_security_group_ids = [aws_security_group.allow_internal.id]
  key_name               = "your-key-name"

  tags = {
    Name = "public-ec2"
  }
}

resource "aws_instance" "private_ec2" {
  ami                    = "ami-09256c524fab91d36"
  instance_type          = "t2.micro"
  subnet_id              = aws_subnet.private.id
  vpc_security_group_ids = [aws_security_group.allow_internal.id]

  tags = {
    Name = "private-ec2"
  }
}



<<<<<<< HEAD


=======
>>>>>>> dad4c68 (terrform error correction)
